--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	"support" : {
 		"issues" : "https://github.com/hjp1011/yii2-workflow-view/issues",
 		"source" : "https://github.com/hjp1011/yii2-workflow-view",
-		"email" : "raoul.boulard@gmail.com"
+		"email" : "hjp1011@163.com"
 	},
 	"minimum-stability" : "stable",
 	"require" : {
@@ -31,8 +31,8 @@
 		}
 	},
 	"authors" : [{
-			"name" : "Raoul",
-			"email" : "raoul.boulard@gmail.com",
+			"name" : "hjp1011",
+			"email" : "hjp1011@163.com",
 			"homepage" : "https://github.com/hjp1011/yii2-workflow-view"
 		}
 	]
